@@ -2,6 +2,9 @@
 CONTRIBUTORS
 
 Graham Percival
+Rune Zedeler
+Jeremie Lumbroso
+Juergen Reuter
 
 
 BUG HUNTERS
